Bug 603825 - Fix a bunch of warnings.  r=jwalden.